kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: my-app
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /web(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: web-service
            port:
              number: 80
      - path: /token(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: tokensrv-service
            port:
              number: 3002
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: authsrv-service
            port:
              number: 3001
      - path: /blob(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: blobsrv-service
            port:
              number: 3003
